# Backup

./: .gitignore  README.md  code.cpp  test  test.cpp
BackupApplication/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
BackupApplication/include/: Backup_Functions.h
BackupSoftware/: .test.cpp.swp  BackupManager.cpp  BackupManager.h  BackupRepository.cpp  BackupRepository.h  CMakeLists.txt  Compression.cpp  Compression.h  CreateBackup.h  Encryption.cpp  Encryption.h  FileInfo.cpp  FileInfo.h  FilterOptions.cpp  FilterOptions.h  LogEntry.cpp  LogEntry.h  LogManager.cpp  LogManager.h  README.md  RestoreBackup.h  TestFileMake.sh  UserInterface.h  test.cpp  test.txt
BackupSoftware/include/: BackupManager.h  Backup_Functions.h  Compression.h  Encryption.h  FileInfo.h  FilterOptions.h  Packer.h
BackupSoftware/src/: BackupManager.cpp  Backup_Functions.cpp  Compression.cpp  Encryption.cpp  FileInfo.cpp  FilterOptions.cpp  Packer.cpp  UserInterface.cpp
BackupSoftware/tests/: TestFileMake.sh  test_packer.cpp
BackupSoftware/tests/dst_file/: AFolder.pak.cps.ept
BackupSoftware/tests/restore/AFolder/: hardlink_file_2.txt  ignore.txt  symlink_file_1.txt
BackupSoftware/tests/restore/AFolder/.ignore_folder/: hidden_file.txt
BackupSoftware/tests/restore/AFolder/folder/: inside_file.txt
BackupSoftware/tests/restore/AFolder/large_folder/: random_large_file  random_large_file.tar
Insruction/: BackUP.mdj  参考文档-软件工程文档模板(完整规范版).doc  小组提交文档-实验报告模板.docx  软件编程规范-华为.doc
Requirement_Analysis/: BackUP.mdj
